# deepen

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
deepen/: __init__.py  activation.py  model.py  propagation.py
src/deepen/: model.py
test/: test_deepen_activation.py  test_deepen_model.py  test_deepen_propagation.py
test/deepen/: model_test.py
