[tool.poetry]
name = "deepen"
version = "0.4.0"
description = "A library for building and training deep neural networks."
authors = ["petejh <petejh.code@q.com>"]
license = "MIT"
packages = [
    { include = "deepen", from = "src" },
]
readme = "README.md"
homepage = "https://github.com/petejh/deepen/"
repository = "https://github.com/petejh/deepen/"
documentation = "https://github.com/petejh/deepen/"
keywords = ["deep learning", "neural network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.9"
h5py = "^3.2.1"
numpy = "^1.20.2"
pytest = { version = "^6.2", optional = true }

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
